clutter (0.8.8-2) UNRELEASED; urgency=low

  * Downgrade pkg-config dep to a recommends.
  * Update download URL in copyright.
  * Use LDFLAGS/CFLAGS vars directly to avoid overriding them completely; bdep
    on cdbs >= 0.4.41.
  * Wrap build-deps and deps.
  * Let libclutter-0.8-dev dep on ${shlibs:Depends}.
  * Bdep on libpango1.0-dev (>= 1.18) and libglib2.0-dev (>= 2.14)
    explicitely.

 -- Loïc Minier <lool@dooz.org>  Fri, 10 Jul 2009 14:57:00 +0200

clutter (0.8.8-1) unstable; urgency=low

  * New upstream release.
  * Ship the COGL documentation
  * Clean up minor lintian warnings

 -- Ross Burton <ross@debian.org>  Fri, 19 Jun 2009 11:38:03 +0100

clutter (0.8.4-1) unstable; urgency=low

  * New upstream release
    - Fixes linking (Closes: #498506)

 -- Ross Burton <ross@debian.org>  Mon, 01 Dec 2008 14:46:24 +0000

clutter (0.8.2-1) unstable; urgency=low

  * New upstream release.

 -- Rob Bradford <robster@debian.org>  Fri, 26 Sep 2008 16:09:31 +0100

clutter (0.8.0-1) unstable; urgency=low

  * New upstream release.

 -- Rob Bradford <robster@debian.org>  Sat, 12 Jul 2008 21:34:06 +0100

clutter (0.6.4-1) unstable; urgency=low

  * New upstream release.

 -- Rob Bradford <robster@debian.org>  Sun, 29 Jun 2008 21:30:53 +0100

clutter (0.6.2-2) unstable; urgency=low

  * Switch to using -march=armv5t when compiling on ARM (closes: #478152.)

 -- Rob Bradford <robster@debian.org>  Mon, 19 May 2008 15:30:29 +0100

clutter (0.6.2-1) unstable; urgency=low

  * New upstream release.

 -- Rob Bradford <robster@debian.org>  Thu, 03 Apr 2008 15:08:09 +0100

clutter (0.6.0-2) unstable; urgency=low

  * Switch dependency to libgl1-mesa-dev|libgl-dev rather than
    just libgl1-mesa-dev so that it does not conflict with other installed
    OpenGL headers.

 -- Rob Bradford <robster@debian.org>  Thu, 28 Feb 2008 14:54:24 +0000

clutter (0.6.0-1) unstable; urgency=low

  * New upstream release.
  - Replace deprecated substvars.
  - Update debian/copyright file.
